[project]
name = "countdown"
version = "0.1.0"
description = "Fast NMF for genomic count data"
authors = [
    {name = "Daniel C. Jones"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata (>=0.11.4,<0.12.0)",
    "jax (>=0.6.1,<0.7.0)",
    "optax (>=0.2.4,<0.3.0)",
    "flax (>=0.10.6,<0.11.0)",
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
